add pause in game

--- a/game.html
+++ b/game.html
@@ -26,6 +26,11 @@
                 shoot with <span class="key">Shift</span>
             </div>
         </div>
+        <div class="instructions middle">
+            <div>
+                Pause <span class="key">Esc</span>
+            </div>
+        </div>
         <div class="instructions right">
             <div>
                 Player 2 move with <span class="key">mk.</span>
