add logo and title to game

--- a/game.html
+++ b/game.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
+    <title>Game Of War</title>
+    <link rel="shortcut icon" href="./img/logo.png" type="image/png">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/game.css">
 </head>
