change landscape in game, add change skin in game

--- a/game.html
+++ b/game.html
@@ -16,6 +16,16 @@
         <h1>Пауза</h1>
         <div class="play-again button">Возобновить игру</div>
         <a href="./index.html" class="go-to-menu button">Закончить игру</a>
+        <ul class="changeskin player1">
+            <li><span class="type1"></span></li>
+            <li><span class="type2"></span></li>
+            <li class="selected"><span class="type3"></span></li>
+        </ul>
+        <ul class="changeskin player2">
+            <li><span class="type1"></span></li>
+            <li class="selected"><span class="type2"></span></li>
+            <li><span class="type3"></span></li>
+        </ul>
     </div>
     <div class="wrapper">
         <div class="instructions">
