--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="img"></div>
                     <div class="text">
                         <h3>US Soldier</h3>
-                        <p>вид вооружённых сил США, ответственный, в первую очередь, за сухопутные военные операции.</p>
+                        <p>Вид вооружённых сил США, ответственный, в первую очередь, за сухопутные военные операции.</p>
                         <p> На 2017 год списочный состав армии составил 460 000 солдат в строю, 335 000 в составе Национальной гвардии и 195 000 в резерве вооружённых сил. Армия управляется специальным департаментом, возглавляемым государственным секретарём (административная, не военная должность). Наивысшая должность — Начальник штаба армии США — входит в Объединённый комитет начальников штабов.</p>
                         <p> Армия США является сухопутными силами (войсками), предназначенными для ведения боевых действий на суше, при этом армия организационно отделяется от ВМС и от ВВС, корпуса морской пехоты, транспортного корпуса, Национальной гвардии, Береговой охраны, военной полиции. Входит в состав Вооружённых сил США, и является видом вооружённых сил США.</p>
                     </div>
