add sound button

--- a/game.html
+++ b/game.html
@@ -50,6 +50,7 @@
             </div>
         </div>
     </div>
+    <div class="sound"></div>
     <script type="text/javascript" src="js/resources.js"></script>
     <script type="text/javascript" src="js/input.js"></script>
     <script type="text/javascript" src="js/sprite.js"></script>
