--- a/game.html
+++ b/game.html
@@ -30,10 +30,10 @@
     <div class="wrapper">
         <div class="instructions">
             <div>
-                Player 1 move with <span class="key">zsc</span>
+                Player 1 move with <span class="key">awd</span>
             </div>
             <div>
-                shoot with <span class="key">Shift</span>
+                shoot with <span class="key">t</span>
             </div>
         </div>
         <div class="instructions middle">
@@ -43,10 +43,10 @@
         </div>
         <div class="instructions right">
             <div>
-                Player 2 move with <span class="key">mk.</span>
+                Player 2 move with <span class="key">arrows</span>
             </div>
             <div>
-                shoot with <span class="key">/</span>
+                shoot with <span class="key">.</span>
             </div>
         </div>
     </div>
