--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
             <p>Графика нового поколения, созданная с помощью Canvas</p>
             <div class="jcarousel">
                 <ul>
-                    <li><img src="http://www.placeholders.ru/placeholder/242aa2/ffffff/noborder/300x180.jpg"></li>
-                    <li><img src="http://www.placeholders.ru/placeholder/2a2a12/ffffff/noborder/300x180.jpg"></li>
-                    <li><img src="http://www.placeholders.ru/placeholder/a41f62/ffffff/noborder/300x180.jpg"></li>
-                    <li><img src="http://www.placeholders.ru/placeholder/6473f5/ffffff/noborder/300x180.jpg"></li>
-                    <li><img src="http://www.placeholders.ru/placeholder/a4c5f8/ffffff/noborder/300x180.jpg"></li>
+                    <li><img src="img/gameplay1.jpg"></li>
+                    <li><img src="img/gameplay2.jpg"></li>
+                    <li><img src="img/gameplay3.jpg"></li>
+                    <li><img src="img/gameplay4.jpg"></li>
+                    <li><img src="img/gameplay5.jpg"></li>
                 </ul>
             </div>
         </div>
