now screenshots can increase

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <title>Game Of War</title>
     <link rel="shortcut icon" href="./img/logo.png" type="image/png">
     <link rel="stylesheet" href="./css/intro.css">
+    <link rel="stylesheet" href="./css/jquery.fancybox.css">
     <script src="./js/jquery-1.7.2.min.js"></script>
     <script src="./js/jquery.jcarousel.min.js"></script>
     <script src="./js/jquery.scrollTo-min.js"></script>
+    <script src="./js/jquery.fancybox.js"></script>
     <script src="./js/intro.js"></script>
 </head>
 
@@ -109,11 +111,11 @@
             <p>Графика нового поколения, созданная с помощью Canvas</p>
             <div class="jcarousel">
                 <ul>
-                    <li><img src="img/gameplay1.jpg"></li>
-                    <li><img src="img/gameplay2.jpg"></li>
-                    <li><img src="img/gameplay3.jpg"></li>
-                    <li><img src="img/gameplay4.jpg"></li>
-                    <li><img src="img/gameplay5.jpg"></li>
+                    <li><a class="fancybox" rel="group" href="img/gameplay1.png"><img src="img/gameplay1mini.jpg" alt="" /></a></li>
+                    <li><a class="fancybox" rel="group" href="img/gameplay2.png"><img src="img/gameplay2mini.jpg" alt="" /></a></li>
+                    <li><a class="fancybox" rel="group" href="img/gameplay3.png"><img src="img/gameplay3mini.jpg" alt="" /></a></li>
+                    <li><a class="fancybox" rel="group" href="img/gameplay4.png"><img src="img/gameplay4mini.jpg" alt="" /></a></li>
+                    <li><a class="fancybox" rel="group" href="img/gameplay5.png"><img src="img/gameplay5mini.jpg" alt="" /></a></li>
                 </ul>
             </div>
         </div>
