--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Game Of War</title>
+    <title>Game of War</title>
     <link rel="shortcut icon" href="./img/logo.png" type="image/png">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/game.css">
@@ -51,10 +51,7 @@
         </div>
     </div>
     <div class="sound"></div>
-    <script type="text/javascript" src="js/resources.js"></script>
-    <script type="text/javascript" src="js/input.js"></script>
-    <script type="text/javascript" src="js/sprite.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="dist/bundle.js"></script>
 </body>
 
 </html>
