--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Game Of War</title>
+    <title>Game of War</title>
     <link rel="shortcut icon" href="./img/logo.png" type="image/png">
     <link rel="stylesheet" href="./css/intro.css">
     <link rel="stylesheet" href="./css/jquery.fancybox.css">
