--- a/game.html
+++ b/game.html
@@ -51,6 +51,7 @@
         </div>
     </div>
     <div class="sound"></div>
+    <div class="music"></div>
     <script type="text/javascript" src="dist/bundle.js"></script>
 </body>
 
