--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div></div>
                 <div>
                     <h3>PVP бои</h3>
-                    <p>Выясни насколько ты хорош в убийстве своих врагов. Тебе понадобится уникальная тактика и стратегия, чтобы показать своим друзьям, кто сдесь главный!</p>
+                    <p>Выясни насколько ты хорош в убийстве своих врагов. Тебе понадобится уникальная тактика и стратегия, чтобы показать своим друзьям, кто здесь главный!</p>
                 </div>
                 <div></div>
                 <div>
